// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usingCrlf.md - markdown-verify 1`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file

testing line endings

`;

exports[`usingCrlf.md - markdown-verify 2`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file/*CR*//*CR*/testing line endings/*CR*/
`;

exports[`usingCrlf.md - markdown-verify 3`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file/*CR*/
/*CR*/
testing line endings/*CR*/

`;

exports[`usingCrlf.md - markdown-verify 4`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file

testing line endings

`;

exports[`usingLf.md - markdown-verify 1`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file

testing line endings

`;

exports[`usingLf.md - markdown-verify 2`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file/*CR*//*CR*/testing line endings/*CR*/
`;

exports[`usingLf.md - markdown-verify 3`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file/*CR*/
/*CR*/
testing line endings/*CR*/

`;

exports[`usingLf.md - markdown-verify 4`] = `
# Markdown file

testing line endings~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# Markdown file

testing line endings

`;
